--- a/config.toml
+++ b/config.toml
@@ -1,3 +1,9 @@
 baseURL = "http://example.org/"
 languageCode = "en-us"
-title = "My New Hugo Site"
+title = "Areum Blog"
+# Change the default theme to be use when building the site with Hugo
+theme = "hugo-theme-learn-master"
+
+# For search functionality
+[outputs]
+home = [ "HTML", "RSS", "JSON"]
