--- a/config.toml
+++ b/config.toml
@@ -7,3 +7,8 @@ theme = "hugo-theme-learn-master"
 # For search functionality
 [outputs]
 home = [ "HTML", "RSS", "JSON"]
+
+[params]
+  # Change default color scheme with a variant one. Can be "red", "blue", "green".
+  themeVariant = "mine"
+
